--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
                 </div>                
             </section>
         </div>
-        <script src="./js/pokemon.js"></script> 
+        <script src="./js/main.js"></script> 
     </body>
 </html>
